--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html {
   line-height: 1;
   background-color: var(--clr-primary-100);
   background-image: url("./images/pattern-background-mobile.svg");
+  background-size: contain;
   background-repeat: no-repeat;
 }
 
